# labTimeBackEnd

./: .gitignore  README.md  db.sqlite3  docker-compose.yml  heroku.yml  manage.py  pyproject.toml  requirements.txt
LabTime/: .env  asgi.py  settings.py  urls.py  wsgi.py
accounts/: admin.py  forms.py  models.py  permissions.py  permissions.py   serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_profile_last_login.py
frontend_demo/: urls.py  views.py
frontend_demo/templates/frontend/: index.html
session/: models.py  urls.py  views.py
session/migrations/: 0001_initial.py
tickets/: admin.py  models.py  permissions.py  urls.py  views.py
tickets/migrations/: 0001_initial.py  0002_auto_20210711_1521.py  0002_ta_ta_id.py  0003_remove_ta_ta_id.py  0004_ta_ta_id.py  0005_student_student_id.py
