[tool.poetry]
name = "labtimebackend"
version = "0.1.0"
description = ""
authors = ["RaneemAbdulazez <raneem97su@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.5"
djangorestframework = "^3.12.4"
djangorestframework-simplejwt = "^4.7.2"
django-cors-headers = "^3.7.0"
whitenoise = "^5.2.0"
gunicorn = "^20.1.0"
django-environ = "^0.4.5"
psycopg2-binary = "^2.9.1"
flake8 = "^3.9.2"
black = "^21.6b0"
requests = "^2.25.1"
fire = "^0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
